--- a/src/assets/scss/common/_mixin.scss
+++ b/src/assets/scss/common/_mixin.scss
@@ -6,6 +6,11 @@
 // $tablet-s-width		: 768px;
 // $mob-l-width		: 640px;
 
+@mixin image-cover {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
 
 // only PC
 @mixin pc-gnb {
