--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/common/mixin';
+
 .profile{
   position: relative;
   display: flex;
@@ -18,9 +20,7 @@
     overflow: hidden;
     border: 1px solid #ddd;
     img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      @include image-cover();
     }
   }
   .contents{
@@ -32,80 +32,13 @@
       justify-content: space-between;
       .sns{
         display: flex;
-         a{
-          margin-right: 10px;
-          width: 25px;
-          height: 30px;
-          i{
-            display: flex;
-            justify-content: center;
-            font-size: 1.5rem;
-            color: #888;
-            transition: .3s ease-in-out;
-            &.instagram{
-              &:hover{
-                color: #c23b3b;
-              }
-            }
-            &.kakao{
-              img{
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-                transform: scale(.9);
-              }
-              &:hover{
-                color: #dc8a25;
-              }
-            }
-          }
-        }
+     
       }
       .ux{
         position: relative;
         display: flex;
-        a, button{
-          display: flex;
-          margin-right: 10px;
-          width: 30px;
-          height: 30px;
-          i{
-            display: flex;
-            justify-content: center;
-            font-size: 1.4rem;
-            color: #888;
-            transition: .3s ease-in-out;
-            &.message{
-              &:hover{
-                color: #b07eef;
-              }
-            }
-            &.like{
-              &:hover{
-                color: #f1b7b7;
-              }
-            }
-          }
-         
-        }
-        .likeEffect{
-          position: absolute;
-          top: -20px;
-          right: 17px;
-          font-size: 1.5rem;
-          opacity: 0;
-          color: #f1b7b7;
-          animation: floatingIcon 3s ease-in-out infinite;
-          span{
-            display: block;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            color: #fff;
-            font-size: .5rem;
-            transform: translate(-50%, -50%);
-          }
-        }
+    
+     
       }
     }
     .text{
@@ -122,50 +55,5 @@
         background: #d6d6d6;
       }
     }
-  }
-}
-@keyframes floatingIcon {
-  0% {
-    top: 0;
-    color: #f1b7b7;
-    opacity: 0;
-    transform: scale(0) rotate(0);
-  }
-  25%{
-    color: #ef7a7a;
-    transform: rotate(10deg);
-  }
-  50%{
-    color: #eecb3d;
-    opacity: 1;
-    transform: scale(1.3) rotate(-10deg);
-  }
-  75%{
-    color: #99ef48;
-    transform: rotate(10deg);
-  }
-  100% {
-    color: #cd5ada;
-    top: -100px;
-    opacity: 0;
-    transform: scale(0.5) rotate(-10deg);
-  }
-}
-
-@keyframes ballon {
-  0% {
-    transform: translateY(0);
-  }
-  25%{
-    transform: translateY(25px);
-  }
-  50%{
-    transform: translateY(0px);
-  }
-  75%{
-    transform: translateY(25px);
-  }
-  100% {
-    transform: translateY(0px);
   }
 }
