--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -6,6 +6,10 @@ header{
   backdrop-filter: blur(5px);
   border-bottom: 1px solid #ccc;
   background: linear-gradient(90deg, #ffffff00 0%, #ffffff50 10%, #ffffff50 90%, #ffffff00 100%);
+  transition: all 0.5s ease-in-out;
+  &.isHidden{
+    top: -63px;
+  }
  .processBar{
     position: fixed;
     top: 0;
@@ -17,31 +21,47 @@ header{
     transition: .7s ease-in-out;
   }
   .container{
-    display: flex;
-    padding: 5px 25px;
     margin: 0 auto;
-    width: 100%;
     max-width: 1280px;
-  
-    ul{
-      width: 80%;
+    nav{
       display: flex;
       justify-content: space-between;
       align-items: center;
-      li{
-        a{
-          display: block;
-          font-size: 1.3rem;
-          font-weight: bold;
-          font-family: 'Caveat', cursive;
-          color: #c7a6a6;
-          letter-spacing: 1px;
-          transition: .3s ease-in;
-          &:hover{
-            color: #8b6b6b;
+      height: 64px;
+      padding: 5px 25px;
+      ul.gnb {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          width: 70%;
+      
+          li {
+            a {
+              display: block;
+              width: 100%;
+              font-size: 1.3rem;
+              font-weight: bold;
+              font-family: 'Caveat', cursive;
+              color: #c7a6a6;
+              letter-spacing: 1px;
+              background-image: linear-gradient(transparent, transparent), linear-gradient(#e6b294, #e6b294);
+              background-repeat: no-repeat;
+              background-position: 0 100%, 0% 100%;
+              background-size: 100% 1px, 0 1px;
+              transition: .3s ease-in;
+      
+              &:hover {
+                color: #8b6b6b;
+                background-size: 0 1px, 100% 1px;
+                background-position: 100% 100%, 0 100%;
+              }
+            }
           }
         }
-      }
+      
+        ul.sns {
+          display: flex;
+        }
     }
   }
 }
