--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,9 +1,10 @@
 .logo{
-  width: 20%;
+  width: 10%;
   a, span{
     font-size: 1.8rem;
     font-family: 'El Messiri', sans-serif;
     letter-spacing: -1.1px;
+    line-height: 1.2;
   }
   a{
     color: #8b6b6b;
