이미지 FADE 효과 컴포넌트 이름 변경 및 SCSS 모듈화 작업

--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -17,7 +17,7 @@
   will-change: transform;
   user-select: none;
   pointer-events: none;
-  background: #2128bd;
+  background: #c7a6a6;
   transition: width .5s ease-in-out, height .5s ease-in-out, background .5s ease-in-out;
 }
 
