--- a/src/assets/scss/common/_var.scss
+++ b/src/assets/scss/common/_var.scss
@@ -1,5 +1,5 @@
-$basic-color: #8b6b6b;
-$basic-light-color: #c7a6a6;
+$color-basic: #8b6b6b;
+$color-basic-light: #c7a6a6;
 $test-color: #bc9b8f;
 $basic-pale-color: #dfc5c5;
 $basic-deep-color: #65463b;
