--- a/src/components/FlowText/FlowText.module.scss
+++ b/src/components/FlowText/FlowText.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/common/var';
+
 @keyframes marquee-r {
   from {transform: translateX(-100%);}
   to {transform: translateX(0);}
@@ -24,17 +26,19 @@
   height: 100%;
   overflow-x: hidden;
   overflow-y: hidden;
-  background-color: #fbed7e;
+  background-color: transparent;
+  border-top: 1px solid $color-basic;
+  border-bottom: 1px solid $color-basic;
   .track{
     white-space: nowrap;
     will-change: transform;
     animation: marquee 18s linear infinite;
-   
+
     p{
       font-family: 'Noto Sans KR', sans-serif;
       line-height: 2.3;
       font-size: 1rem;
-      color: #fff;
+      color: $color-basic;
       letter-spacing: 2px;
       transition: .4s ease-in-out;
       &:hover {
@@ -49,13 +53,13 @@
   left: -120px;
   width: 120%;
   height: 100%;
-  color: #8b6b6b;
+  color: $color-basic;
   font-size: 6rem;
   overflow: hidden;
   // transform: rotate(-20deg);
    .track {
       position: absolute;
-      padding: 0 0;
+      display: flex;
       height: 100%;
       overflow: hidden;
       white-space: nowrap;
@@ -91,6 +95,23 @@
 }
 
 @media screen and (max-width: 768px) {
+  .animatedTitle {
+      position: relative;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
+      overflow-y: hidden;
+      background-color: transparent;
+      border-top: 1px solid $color-basic;
+      border-bottom: 1px solid $color-basic;
+  
+      .track {
+        p {
+          font-size: .9rem;
+        }
+      }
+    }
   .marquee {
     left: -40px;
     font-size: 3rem;
