--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/common/var';
+
 header{
   position: fixed;
   top: 0;
@@ -17,7 +19,7 @@ header{
     z-index: 1005;
     width: 0%;
     height: 5px;
-    background-color: #82a75e;
+    background-color: $color-basic;
     transition: .7s ease-in-out;
   }
   .container{
@@ -123,6 +125,20 @@ header{
       a{
         display: block;
         font-size: 4rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header{
+    &.isHidden{
+      top: -56px;
+    }
+    .container{
+      max-width: 100%;
+      nav{
+        height: 50px;
       }
     }
   }
