--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -57,3 +57,25 @@
     }
   }
 }
+
+@keyframes ballon {
+  0% {
+    transform: translateY(0);
+  }
+
+  25% {
+    transform: translateY(25px);
+  }
+
+  50% {
+    transform: translateY(0px);
+  }
+
+  75% {
+    transform: translateY(25px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
