--- a/src/components/ListCards/ListCards.module.scss
+++ b/src/components/ListCards/ListCards.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/common/mixin';
+
 .listCards{
   margin-top: 30px;
   display: flex;
@@ -45,9 +47,7 @@
         height: 350px;
         border-radius: 10px;
         img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+          @include image-cover();
           transition: .5s ease-in-out;
         }
       }
