--- a/src/components/Popup/popup.module.scss
+++ b/src/components/Popup/popup.module.scss
@@ -1,3 +1,6 @@
+
+@import '../../assets/scss/common/mixin';
+
 .popupLayer{
   position: fixed;
   top: 0;
@@ -22,7 +25,7 @@
       padding: 0 35px;
       height: 120px;
       line-height: 120px;
-      font-size: 1.5rem;
+      font-size: 2rem;
       font-weight: bold;
       border-bottom: 2px solid #59db92;
       background-color: #bc9b8f;
@@ -37,9 +40,7 @@
             overflow: hidden;
       
             img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
+              @include image-cover();
             }
           }
         }
@@ -52,7 +53,7 @@
             width: 65%;
             .subTitle{
               display: inline-block;
-              font-size: 4rem;
+              font-size: 4.5rem;
               line-height: 1;
               letter-spacing: 2px;
               font-family: 'Abril Fatface', cursive;
