--- a/src/components/TabComponent/TabComponent.module.scss
+++ b/src/components/TabComponent/TabComponent.module.scss
@@ -1,9 +1,14 @@
   .tabMenu {
-    display: flex;
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    padding-bottom: 5px;
     border-bottom: 2px dotted #d2c3be4f;
     border-bottom-left-radius: 12px;
     li.tabList {
       margin-right: 5px;
+      display: table-cell;
+      background-color: #ddd;
       &.clicked {
         button{
           color: #fff;
@@ -15,16 +20,17 @@
       }
       button{
         position: relative;
-        padding: 18px 30px;
+        display: block;
+        padding: 15px 0;
+        width: 100%;
+        height: 100%;
         color: #ababab;
-        font-size: 1rem;
+        font-size: .9rem;
+        text-align: center;
         letter-spacing: .5px;
-        background-color: #ddd;
         transition: .5s ease-in-out;
     
         &:hover{
-          width:100%;
-          height:100%;
           color: #fff;
           background: #658347;
           &:before{
