--- a/src/index.scss
+++ b/src/index.scss
@@ -78,9 +78,12 @@ p::selection, h1::selection, h2::selection, h3::selection, h4::selection {
     // padding: 25px 0;
   }
   .swiper-button-next, .swiper-button-prev{
-    width: 35px;
+    width: 40px;
     height: 40px;
     font-size: 25px;
+    &:after{
+      font-size: 1.5rem;
+    }
   }
   .swiper-button-prev{
     &:after{
