--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -1,26 +1,40 @@
 .portfolio{
   padding: 0;
-  .content{
+  .topContent{
     width: 100%;
     height: 100vh;
   }
-  .container{
-    margin: 0 auto;
-    max-width: 1280px;
-    .breadCrumbsBox {
-      margin-top: 200px;
-    }
-    .projectBox{
-      margin: 100px 0;
-    }
+  .content{
+    height: 100vh;
+    .container {
+        margin: 0 auto;
+        max-width: 1280px;
+    
+        .breadCrumbsBox {
+          padding-top: 200px;
+        }
+    
+        .projectBox {
+          margin: 100px 0 50px;
+        }
+      }
   }
 }
 
 @media screen and (max-width: 768px) {
   .portfolio{
-    .container{
-      padding: 0 20px;
-      width: 100%;
+    .content{
+      .container {
+        padding: 0 20px;
+        width: 100%;
+        .breadCrumbsBox {
+          padding-top: 70px;
+        }
+        .projectBox {
+          margin: 50px 0 50px;
+
+        }
+      }
     }
   }
 }
