--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -1,7 +1,7 @@
 .contact{
-  padding: 70px 0;
+  padding: 200px 0;
   width: 100%;
-  height: 100%;
+  height: auto;
   .container{
     margin: 0 auto;
     max-width: 1280px;
@@ -22,21 +22,28 @@
           margin-top: 20px;
           display: flex;
           flex-direction: column;
-          .formEmail{
+          input{
+            margin-top: 3px;
+            &:first-child{
+              margin-top: 0;
+            }
+          }
+          .formText{
             padding: 7px 10px;
             border: 1px solid #dfdfdf;
             background: #ffffff70;
           }
-          .formContext{
+          .formTextarea{
             padding: 7px 10px;
             margin-top: 10px;
             border: 1px solid #dfdfdf;
             background: #ffffff70;
           }
           .btnArea{
-            width: 100%;
             display: flex;
             justify-content: flex-end;
+            margin-top: 10px;
+            width: 100%;
             button{
               margin-left: 5px;
             }
