flowText 컴포넌트 개선

--- a/src/assets/scss/common/_mixin.scss
+++ b/src/assets/scss/common/_mixin.scss
@@ -12,6 +12,12 @@
    object-fit: cover;
 }
 
+@mixin animationFlow($name, $duration) {
+   white-space: nowrap;
+   will-change: transform;
+   animation: $name $duration linear infinite;
+}
+
 // only PC
 @mixin pc-gnb {
 	@media screen and (min-width: #{$tablet-s-width + 1}) {
