--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -70,8 +70,8 @@ header{
 
 .hamburger {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 7%;
+  right: 4%;
   z-index: 11;
   display: block;
   padding: 7px;
@@ -133,7 +133,7 @@ header{
 @media screen and (max-width: 768px) {
   header{
     &.isHidden{
-      top: -56px;
+      top: -55px;
     }
     .container{
       max-width: 100%;
