--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -85,7 +85,7 @@
     }
     
     .imageEffectBox{
-      margin: 300px 0;
+      margin: 300px 0 100px;
       h3 {
         position: relative;
         margin-bottom: 220px;
@@ -107,108 +107,8 @@
   .accordion {
     margin-top: 100px;
     height: 100vh;
-    $itemsNo: 4;
 
-    ul {
-      list-style: none;
-      -webkit-perspective: 900;
-      perspective: 900;
-
-      li {
-        position: relative;
-        height: calc(100vh / #{$itemsNo});
-        border-bottom: 1px solid #bc9b8f;
-        background-color: #424242;
-        transition: all .5s ease;
-        animation: flipdown 0.5s ease both;
-
-        &:hover {
-          background-color: #47352f;
-
-          &:before {
-            content: '';
-            width: 100%;
-            height: 100%;
-            color: #fff;
-            // background-color: #be4f4f;
-          }
-
-          .floatImg {
-            top: -60px;
-            right: 10%;
-            opacity: 1;
-          }
-
-          .thumb {
-            img {
-              opacity: .7;
-              transform: scale(1.1);
-            }
-          }
-        }
-
-        $delay: 0.4;
-
-        @for $i from 1 through $itemsNo {
-          &:nth-of-type(#{$i}) {
-            animation-delay: #{$delay}s;
-            $delay: $delay +0.3;
-          }
-        }
-
-        .floatImg {
-          position: absolute;
-          top: 0;
-          right: 10%;
-          z-index: 2;
-          width: 220px;
-          height: 220px;
-          overflow: hidden;
-          opacity: 0;
-          box-shadow: 0 40px 40px -20px #00000080;
-          transition: .5s ease-in-out;
-
-          img {
-            @include image-cover();
-          }
-        }
-
-        .textBox {
-          position: absolute;
-          top: 0;
-          left: 0;
-          z-index: 1;
-          width: 100%;
-          height: 100%;
-          overflow: hidden;
-          // p{
-          //   position: absolute;
-          //   top: 50%;
-          //   left: 50%;
-          //   z-index: 1;
-          //   font-size: 3rem;
-          //   color: #fff;
-          //   text-align: center;
-          //   transform: translate(-50%, -50%);
-          // }
-        }
-
-        .thumb {
-          display: block;
-          width: 100%;
-          height: 100%;
-          opacity: .5;
-          overflow: hidden;
-          transition: .5s ease-in-out;
-          img {
-            display: block;
-            @include image-cover();
-            opacity: .5;
-            transition: .5s ease-in-out;
-          }
-        }
-      }
-    }
+  
   }
 }
 
@@ -239,7 +139,7 @@
         }
       }
       .imageEffectBox{
-        margin: 200px 0;
+        margin: 200px 0 0;
         h3{
         margin-bottom: 30px;
         padding-left: 50px;
@@ -262,20 +162,6 @@
       }
     }
     
-    .accordion {
-      ul {
-        li {
-          .floatImg{
-            transform: scale(0.8);
-          }
-          &:hover {
-            .floatImg {
-              top: -135px;
-            }
-          }
-        }
-      }
-    }
     .imageFadeEffect{
       .container{
         padding: 0;
