--- a/src/assets/scss/common/_var.scss
+++ b/src/assets/scss/common/_var.scss
@@ -3,3 +3,7 @@ $color-basic-light: #c7a6a6;
 $test-color: #bc9b8f;
 $basic-pale-color: #dfc5c5;
 $basic-deep-color: #65463b;
+
+
+// transition
+$default-speed: .5s ease-in-out;
