--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -1,4 +1,6 @@
 
+@import './assets/scss/common/var';
+
 .wrap{
   position: relative;
   padding: 0;
@@ -18,7 +20,7 @@
   user-select: none;
   pointer-events: none;
   background: #c7a6a6;
-  transition: width .5s ease-in-out, height .5s ease-in-out, background .5s ease-in-out;
+  transition: width $default-speed, height $default-speed, background $default-speed;
 }
 
 // ::selection {
