--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,8 @@
 .footer{
   position: relative;
   padding: 25px 25px;
-  border-top: 1px solid #ddd;
-  background-color: #65463b;
+  border-top: 1px solid #6a5858;
+  background-color: #3e3c39;
   .container{
     margin: 0 auto;
     width: 1280px;
