--- a/src/components/IconItems/Icons.module.scss
+++ b/src/components/IconItems/Icons.module.scss
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         font-size: 1.5rem;
-        color: #aaa;
+        color: #c7a6a6;
         transition: .3s ease-in-out;
   
         &.instagram {
