--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -1,5 +1,5 @@
 .contact{
-  padding: 200px 0 0;
+  padding: 180px 0 0;
   width: 100%;
   height: auto;
   .container{
@@ -13,6 +13,7 @@
         padding: 0 10% 0 2%;
         width: 60%;
         .title{
+          margin-top: 50px;
           font-size: 8rem;
           letter-spacing: -1.8px;
           line-height: 0.9;
