--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -106,7 +106,7 @@
     .blogContent {
       width: 100%;
       height: auto;
-      padding: 120px 0 0;
+      padding: 20vh 0 0;
       .btnWrap{
         position: relative;
       }
@@ -130,7 +130,7 @@
         .thumb{
           display: block;
           width: 100%;
-          height: 95px;
+          height: 20vh;
         }
       }
     }
