--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -35,7 +35,7 @@ header{
           display: flex;
           justify-content: space-between;
           align-items: center;
-          width: 70%;
+          width: 60%;
       
           li {
             a {
@@ -77,7 +77,23 @@ header{
   padding: 7px;
   width: 40px;
   height: 40px;
+  &.isOpen{
+    /* Hambuger click animation to cross */
+    span:first-child {
+      transform: translateY(10px) rotate(45deg);
+    }
 
+    span:nth-child(2) {
+      transform: scaleX(0);
+    }
+
+    span:last-child {
+      transform: translateY(-7px) rotate(-45deg);
+    }
+  }
+  &.disable{
+    display: none;
+  }
   span {
     display: block;
     margin: 5px auto;
@@ -89,23 +105,10 @@ header{
   }
 }
 
-/* Hambuger click animation to cross */
-.hamburger.isOpen {
-  span:first-child {
-    transform: translateY(10px) rotate(45deg);
-  }
 
-  span:nth-child(2) {
-    transform: scaleX(0);
-  }
-
-  span:last-child {
-    transform: translateY(-7px) rotate(-45deg);
-  }
-}
 
 .fullMenus{
-  position: absolute;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
