--- a/src/components/Popup/popup.module.scss
+++ b/src/components/Popup/popup.module.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   background-color: #00000070;
-  .popupContent{
+  .popupContainer{
     width: 80%;
     height: 100%;
     color: #fff;
@@ -45,11 +45,11 @@
           }
         }
       
-        .textWrap {
+        .contentWrap {
           padding: 0 50px;
           display: flex;
           margin-top: 100px;
-          .textLeft{
+          .left{
             width: 65%;
             .subTitle{
               display: inline-block;
@@ -62,7 +62,7 @@
               margin-top: 20px;
             }
           }
-          .textRight{
+          .right{
             width: 35%;
             .log{
               padding-left: 15%;
@@ -151,7 +151,7 @@
 
 @media screen and (max-width: 768px) {
   .popupLayer{
-    .popupContent{
+    .popupContainer{
       width: 100%;
       h3.toptitle{
         padding: 25px 45px 25px 20px;
@@ -160,17 +160,17 @@
         font-size: 1.2rem;
       }
       .scrollWrap{
-        .textWrap{
-          margin-top: 60px;
+        .contentWrap{
+          margin: 60px 0 30px;
           padding: 0 20px;
           flex-direction: column-reverse;
-          .textRight{
+          .right{
             width: 100%;
             .log{
               padding-left: 20px;
             }
           }
-          .textLeft{            
+          .left{            
             margin-top: 30px;
             width: 100%;
           }
