--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -5,7 +5,7 @@
     height: 100vh;
   }
   .content{
-    height: 100vh;
+    height: 100%;
     .container {
         margin: 0 auto;
         max-width: 1280px;
