--- a/src/pages/ToyProject/ToyProject.module.scss
+++ b/src/pages/ToyProject/ToyProject.module.scss
@@ -27,13 +27,13 @@
       overflow: hidden;
       background-color: #ddd;
 
-      article.panel {
+      .panel {
         position: relative;
         /* overflow: hidden; */
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         align-self: center;
         color: #333;
         text-align: left;
@@ -42,14 +42,13 @@
         .itemContent {
           position: relative;
           display: flex;
+          justify-content: flex-end;
           align-items: center;
-          flex: 1 0 75vw;
-          max-width: 75vw;
-
-          
+          flex: 1 0 70vw;
+          max-width: 70vw;
 
           .itemImage {
-            width: 58vw;
+            width: 60%;
             overflow: hidden;
             img {
               @include image-cover();
@@ -58,22 +57,29 @@
 
           .itemBody {
             position: absolute;
-            left: 0;
+            left: 20%;
             top: 50%;
             width: 43%;
             color: #fff;
-            transform: translate(-38%, -50%);
+            transform: translate(0, -50%);
             .title {
-                font-size: 4vw;
+                font-size: 4.5rem;
                 font-weight: bold;
                 line-height: 1;
             }
             .desc{
               margin-top: 10px;
-              font-size: 1rem;
+              font-size: 1.2rem;
             }
             .tags{
+              margin-top: 20px;
               display: flex;
+              & li{
+                margin-right: 2px;
+              }
+            }
+            .btnWrap{
+              margin-top: 15px;
             }
           }
         }
